2001-06-13  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>

	* configure.in: Added "sk" for Slovak to $ALL_LINGUAS

2001-06-10  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-engine-config.c: #ifdef FIXME all gnome-config calls.

Sun Jun 10 01:27:57 2001  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* bonobo/bonobo-control.c (impl_Bonobo_Control_focus): altered a
	  gtk_container_focus() call to be a gtk_widget_child_focus() call
	  (matching a recent gtk+ change).

2001-06-07  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added "az", "wa" and Norwegian to $ALL_LINGUAS

2001-06-01  Joe Shaw  <joe@ximian.com>

	* bonobo/bonobo-canvas-component.c: Added 
	_bonobo_boolean_handled_accumulator(), ripped from gtk+/gtk/gtkmain.c.

2001-05-31  Joe Shaw  <joe@ximian.com>

	* bonobo/bonobo-canvas-component.c: GObjectify. Change calls to
	GNOME_CANVAS_ITEM_CLASS() to GNOME_CANVAS_ITEM_GET_CLASS(). Make
	gcc_destroy() gcc_finalize().

	* bonobo/bonobo-embeddable.c: GObjectify. Change
	bonobo_embeddable_destroy() to bonobo_embeddable_finalize()

	* bonobo/bonobo-view.c: GObjectify. Delete
	gnome_marshal_NONE__DOUBLE.

2001-05-30  Dietmar Maurer  <dietmar@ximian.com>

	* bonobo/bonobo-control.c (bonobo_control_set_properties): pass a
	Bonobo_PropertyBag instead of a BonoboPropertyBag
	(bonobo_control_get_properties): return a Bonobo_PropertyBag

2001-05-30  Johan Dahlin  <zilch.am@home.se>

	* bonobo/bonobo-ui-toolbar-item.h: Removed duplicate prototypes.
	
2001-05-30  Christophe Merlet  <redfox@eikonex.org>

	* configure.in: Added fr to $ALL_LINGUAS

2001-05-25  Joe Shaw  <joe@ximian.com>

	* bonobo/bonobo-ui-engine-config.c (dialog_new),
	bonobo/bonobo-selector.c (bonobo_selector_construct):
	GTK_STOCK_BUTTON_OK -> GTK_STOCK_OK

2001-05-19  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-plug.[ch]: Derive from GtkPlug.
	* bonobo/bonobo-socket.[ch]: Derive from GtkSocket.

	* bonobo/bonobo-control.c (process_events): Use g_main_context_pending()