@@ -31,6 +31,7 @@ enum {
 static guint view_signals [LAST_SIGNAL];
 
 struct _BonoboViewPrivate {
+	gpointer stop_warning_syntax_error_empty_declaration_on_solaris;
 };
 
 static void
